# sf-doc-gen

./: README.md  pyproject.toml
policy_gen/: __init__.py  __main__.py  _cli.py  generator.py  level_numbering.py
policy_gen/pdf/: __init__.py  _fonts.py  _style.py  _template.py  colours.py
policy_gen/pdf/_fonts/: __init__.py
policy_gen/pdf/_sf_logo/: __init__.py
