[tool.poetry]
name = "policy-gen"
version = "0.1.0"
description = "Policies documentation for Social Finance"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"
packages = [
    { include = "policy_gen" },
]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
