[tool.poetry]
name = "policy-gen"
version = "0.1.0"
description = "Policies documentation for Social Finance"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"
packages = [
    { include = "policy_gen" },
]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.0.5"
fonttools = "^4.42.1"
python-frontmatter = "^1.0.0"
markdown = "^3.4.4"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
gitpython = "^3.1.38"

[tool.poetry.scripts]
policy-gen = "policy_gen._cli:generate"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
